--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -41,11 +41,32 @@ jobs:
           docker tag $ECR_REPOSITORY:$IMAGE_TAG ${{ steps.login-ecr.outputs.registry }}/$ECR_REPOSITORY:$IMAGE_TAG
           docker push ${{ steps.login-ecr.outputs.registry }}/$ECR_REPOSITORY:$IMAGE_TAG
 
-      # 5. Update ECS Service to use new image
-      - name: Deploy to Amazon ECS
+           # 5. Create or Update ECS Service
+      - name: Create or Update ECS Service
         run: |
-          aws ecs update-service \
-            --cluster $ECS_CLUSTER \
-            --service $ECS_SERVICE \
-            --force-new-deployment \
-            --region $AWS_REGION
+          # Check if service exists
+          if aws ecs describe-services \
+              --cluster $ECS_CLUSTER \
+              --services $ECS_SERVICE \
+              --region $AWS_REGION \
+              --query "services[?status=='ACTIVE']" \
+              --output text | grep -q "$ECS_SERVICE"; then
+              
+              echo "Service exists — updating..."
+              aws ecs update-service \
+                --cluster $ECS_CLUSTER \
+                --service $ECS_SERVICE \
+                --force-new-deployment \
+                --region $AWS_REGION
+          else
+              echo "Service not found — creating..."
+              aws ecs create-service \
+                --cluster $ECS_CLUSTER \
+                --service-name $ECS_SERVICE \
+                --task-definition webapp-cicd-task \
+                --launch-type EC2 \
+                --desired-count 1 \
+                --network-configuration "awsvpcConfiguration={subnets=[subnet-074e533c8ad3f38bb],securityGroups=[sg-0cd6bfea23f05b21c],assignPublicIp=ENABLED}" \
+                --region $AWS_REGION
+          fi
+
